--- a/index.html
+++ b/index.html
@@ -361,8 +361,8 @@
 
         <!-- Footer -->
         <footer class="footer">
-            <p><i class="fas fa-code"></i> Sistema de Controle Financeiro com Firebase</p>
-            <p>Dados sincronizados na nuvem</p>
+            <p><i class="fas fa-code"></i> Sistema de Controle Financeiro</p>
+            <p>"© 2025 - Todos os direitos reservados"</p>
             <button id="btn-exportar" class="btn" style="background:#17a2b8; color:white; margin:5px;">
                 <i class="fas fa-file-export"></i> Exportar
             </button>
@@ -1739,3 +1739,4 @@
     </script>
 </body>
 </html>
+
