--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 
         <!-- Footer -->
         <footer class="footer">
-            <p><i class="fas fa-code"></i> Sistema de Controle Financeiro</p>
+            <p> Sistema de Controle Financeiro</p>
             <p>"© 2025 - Todos os direitos reservados"</p>
             <button id="btn-exportar" class="btn" style="background:#17a2b8; color:white; margin:5px;">
                 <i class="fas fa-file-export"></i> Exportar
@@ -1739,4 +1739,5 @@
     </script>
 </body>
 </html>
+
 
